Fix serviceEntry opening and closing on click of map marker so it doesn't get stuck in halfway state

--- a/src/css/finder.less
+++ b/src/css/finder.less
@@ -45,6 +45,10 @@ html {
   cursor: default;
 }
 
+#searchCount {
+  cursor: default;
+}
+
 .searchCountEmpty {
   color: #FFFFFF;
   background-color: #D9534F;
